# ccamera

./: README.md  settings.gradle
app/: README.todo  build.gradle
app/src/androidTest/java/com/we/ccamera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: Condition.h  Errors.h  Mutex.h  SafetyQueue.h  Thread.h
app/src/main/cpp/record/: AVMediaData.cpp  AVMediaData.h  AudioEncoder.cpp  AudioEncoder.h  MediaHeader.h  MediaMuxer.cpp  MediaMuxer.h  MediaRecorder.cpp  MediaRecorder.h  RecordParam.h  Resampler.cpp  Resampler.h  VideoEncoder.cpp  VideoEncoder.h  YuvConvertor.cpp  YuvConvertor.h  YuvData.cpp  YuvData.h  native-lib.cpp
app/src/main/java/com/we/ccamera/: MainActivity.java
app/src/main/java/com/we/ccamera/cameracontrol/: CameraController.java  ICameraController.java
app/src/main/java/com/we/ccamera/manager/: RecordManager.java
app/src/main/java/com/we/ccamera/presenter/: CCAudioRecorder.java  CCMediaRecorder.java  CCRecordPresenter.java  CCameraBuffer.java  FFAudioRecorder.java  IMediaRecord.java  OnFrameAvailableListener.java  OnSurfaceTextureListener.java  PreviewCallback.java
app/src/main/java/com/we/ccamera/renderer/: BaseRenderer.java  CameraRenderer.java  GLHelper.java
app/src/main/java/com/we/ccamera/util/: ImageConvertUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/we/ccamera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
